--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,5 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+甄嬛传 01 ｜ Empresses in the Palace 01 高清 \[QOaXm_9S9_0].mp3
+甄嬛传 02 ｜ Empresses in the Palace 02 高清 \[Iu4A46BD9lw].mp3
